workshop03/appv1-deployment.yaml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
   name: appv1-deployment

spec:
   replicas: 3
   template:
      metadata:
         labels:
            name: myapp
            version: v1
      spec:
         containers:
            - name: myapp-container
              image: stackupiss/northwind-app:v1
              resources:
                 requests:
                    cpu: "20m"
                    memory: "55M"
            #  livenessProbe:
            #     httpGet:
            #        path: /_status/healthz
            #        port: 5000
            #     initialDelaySeconds: 90
            #     timeoutSeconds: 10
            #  readinessProbe:
            #     httpGet:
            #        path: /_status/healthz
            #        port: 5000
            #     initialDelaySeconds: 30
            #     timeoutSeconds: 10
              ports:
                 - containerPort: 3000
                   name: myapp-port
              imagePullPolicy: Always
         restartPolicy: Always
