workshop03/app-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: myapp-ing
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: "/"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
   rules:
      - host: app1.157.230.194.49.nip.io
        http:
           paths:
              - backend:
                 serviceName: appv1-svc
                 servicePort: 80
      - host: app2.157.230.194.49.nip.io
        http:
           paths:
              - backend:
                 serviceName: appv2-svc
                 servicePort: 80
   backend:
      serviceName: appv2-svc
      servicePort: 80
